examples/test/testpolicy10662.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10662
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key47: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value45
          key14: value21
          key24: value42
      podSelector:
        matchLabels:
          key44: value33
          key0: value3
          key19: value31
